Moved rule engine to dans-java-utils