@@ -16,7 +16,9 @@
 package nl.knaw.dans.validatedansbag.core.rules;
 
 import lombok.extern.slf4j.Slf4j;
-import nl.knaw.dans.validatedansbag.core.engine.RuleResult;
+
+import nl.knaw.dans.lib.util.ruleengine.BagValidatorRule;
+import nl.knaw.dans.lib.util.ruleengine.RuleResult;
 import nl.knaw.dans.validatedansbag.core.service.DataverseService;
 import nl.knaw.dans.validatedansbag.core.service.XmlReader;
 import org.joda.time.DateTime;
@@ -39,7 +41,7 @@ public class DatasetXmlEmbargoPeriodWithinLimits extends DataverseRuleBase imple
         var document = xmlReader.readXmlFile(path.resolve("metadata/dataset.xml"));
         var expr = "/ddm:DDM/ddm:profile/ddm:available";
 
-        var nodes = xmlReader.xpathToStream(document, expr).collect(Collectors.toList());
+        var nodes = xmlReader.xpathToStream(document, expr).toList();
         if (nodes.isEmpty()) {
             return RuleResult.ok();
         }
